finished member pop-up window